--- a/GardenMembership.Application/GardenMembership.Application.csproj
+++ b/GardenMembership.Application/GardenMembership.Application.csproj
@@ -11,4 +11,7 @@
   <ItemGroup>
     <PackageReference Include="MediatR" Version="5.1.0" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="Class1.cs" />
+  </ItemGroup>
 </Project>
