--- a/GardenMembership.SharedKernel/GardenMembership.SharedKernel.csproj
+++ b/GardenMembership.SharedKernel/GardenMembership.SharedKernel.csproj
@@ -9,5 +9,12 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Interfaces\" />
+    <Folder Include="Extensions\" />
+    <Folder Include="Extensions\EntityFramework\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="Microsoft.EntityFrameworkCore">
+      <HintPath>..\..\..\..\..\usr\local\share\dotnet\sdk\NuGetFallbackFolder\microsoft.entityframeworkcore\2.2.0-preview3-35497\lib\netstandard2.0\Microsoft.EntityFrameworkCore.dll</HintPath>
+    </Reference>
   </ItemGroup>
 </Project>
