Adds call to extension method ApplyStateChanges() to SaveChanges() method.

--- a/GardenMembership.SharedKernel/GardenMembership.SharedKernel.csproj
+++ b/GardenMembership.SharedKernel/GardenMembership.SharedKernel.csproj
@@ -13,8 +13,6 @@
     <Folder Include="Extensions\EntityFramework\" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.EntityFrameworkCore">
-      <HintPath>..\..\..\..\..\usr\local\share\dotnet\sdk\NuGetFallbackFolder\microsoft.entityframeworkcore\2.2.0-preview3-35497\lib\netstandard2.0\Microsoft.EntityFrameworkCore.dll</HintPath>
-    </Reference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.4" />
   </ItemGroup>
 </Project>
