--- a/GardenMembership.UI/GardenMembership.UI.csproj
+++ b/GardenMembership.UI/GardenMembership.UI.csproj
@@ -16,5 +16,9 @@
   <ItemGroup>
     <ProjectReference Include="..\GardenMembership.Application\GardenMembership.Application.csproj" />
     <ProjectReference Include="..\GardenMembership.Domain\GardenMembership.Domain.csproj" />
+    <ProjectReference Include="..\GardenMembership.Queries\GardenMembership.Queries.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Pages\Baskets\" />
   </ItemGroup>
 </Project>
